--- a/frontend/public/scss/product-faculty-members.scss
+++ b/frontend/public/scss/product-faculty-members.scss
@@ -30,13 +30,21 @@ body.new-design {
         overflow: hidden;
         margin: 0;
 
-        h3 {
+        button {
           font-size: 16px;
           font-weight: 700;
           line-height: normal;
+          border: 0;
+          background-color: white;
+          padding: 0 0 8px 0;
+          text-align: left;
+
+          &:hover {
+           color: $brand-button-bg;
+          }
         }
 
-        h4 {
+        .title {
           font-size: 13px;
           font-weight: 400;
           line-height: normal;
