fix course card not keyboard accessible issue

--- a/cms/templates/course_list_card.html
+++ b/cms/templates/course_list_card.html
@@ -1,17 +1,19 @@
 <ul>
     {% for card in cards %}
-    <li onClick="javascript:window.open('{{card.course.page.url}}');"> 
+    <li>
         <div class="program-course-card">
-            <div class="image">
-                <img src="{{card.featured_image}}" alt="">
-                <div class="overlay"></div>
-            </div>
-            <div class="program-course-card-info">
-                <div class="start-date">
-                {{card.start_descriptor}}
+            <a href="{{card.course.page.url}}" class="program-course-card-link">
+                <div class="image">
+                    <img src="{{card.featured_image}}" alt="">
+                    <div class="overlay"></div>
                 </div>
-                <h3 class="title">{{card.course.title}}</h3>
-            </div>
+                <div class="program-course-card-info">
+                    <div class="start-date">
+                    {{card.start_descriptor}}
+                    </div>
+                    <h3 class="title">{{card.course.title}}</h3>
+                </div>
+            </a>
         </div>
     </li>
     {% endfor %}
