--- a/frontend/public/scss/cards.scss
+++ b/frontend/public/scss/cards.scss
@@ -8,11 +8,12 @@ div.std-card {
 
     border-radius: 5px;
     background: #FFF;
+    margin-bottom: 30px;
     
     /* Dropshadow */
     box-shadow: $card-drop-shadow;
 
-    div, h1, h2, h3, h4, h5, h6, p, a, button {
+    div, h1, h2, h3, h4, h5, h6, p, a, button, ul, li {
         color: #000;
         font-family: Inter;
         font-style: normal;
@@ -20,15 +21,42 @@ div.std-card {
         margin: 0;
     }
 
-    div.form-group {
-        gap: 10px;        
+    p, li {
+        line-height: 23px;
+    }
 
+    ul {
+        list-style: none;
+        padding: 0;
+        margin-top: -20px;
+        padding-bottom: 4px;
+        border-bottom: 1px solid $home-page-border-grey;
+    }
+
+    li {
+        margin-left: 22px;
+        margin-bottom: 14px;
+    }
+
+    div {
+        gap: 10px;       
+        align-self: stretch; 
+        padding-bottom: 0;
+        margin-bottom: 30px;
+    }
+
+    div:last-child {
+        margin-bottom: 0;
+    }
+
+    div.form-group {
         label {
             color: $footer-blue-bg;
             font-family: Inter;
             font-size: 14px;
             font-weight: 600;
             line-height: 18px; /* 128.571% */ 
+            margin-bottom: 10px;
         }
 
         input, select {
@@ -50,21 +78,31 @@ div.std-card {
         padding-bottom: 0;
     }
 
-    form {
+    button {
         width: 100%;
 
-        button {
-            width: 100%;
+        display: inline-flex;
+        padding: 20px 40px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    
+        border-radius: 5px;
+        background: $brand-button-bg;
+        color: white;
+    }
 
-            display: inline-flex;
-            padding: 20px 40px;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        
-            border-radius: 5px;
-            background: $brand-button-bg;
-            color: white;
-        }
+    button.btn-gradient-red {
+        color: white;
+    }
+
+    button.btn-gradient-red:hover {
+        background-color: $home-page-header-blue !important;
+        border-color: $home-page-header-blue;
+    }
+
+    form {
+        width: 100%;
+        gap: 30px;
     }
 }
