--- a/frontend/public/scss/product-page/program-courses.scss
+++ b/frontend/public/scss/product-page/program-courses.scss
@@ -143,6 +143,8 @@ body.new-design {
 
             .program-course-card-link {
                 text-decoration: none;
+                display: block;
+                width: fit-content;
             }
         }
     }
