--- a/frontend/public/scss/cards.scss
+++ b/frontend/public/scss/cards.scss
@@ -1,10 +1,8 @@
 div.std-card {
     display: flex;
-    width: 536px;
-    padding: 30px;
+    padding: 0;
     flex-direction: column;
     align-items: flex-start;
-    gap: 30px; 
 
     border-radius: 5px;
     background: #FFF;
@@ -13,96 +11,171 @@ div.std-card {
     /* Dropshadow */
     box-shadow: $card-drop-shadow;
 
-    div, h1, h2, h3, h4, h5, h6, p, a, button, ul, li {
-        color: #000;
-        font-family: Inter;
-        font-style: normal;
-        line-height: normal;
-        margin: 0;
+    &.std-card-auth {
+        width: 535px;
     }
 
-    p, li {
-        line-height: 23px;
-    }
-
-    ul {
-        list-style: none;
+    div.std-card-body {
+        margin: 30px;
         padding: 0;
-        margin-top: -20px;
-        padding-bottom: 4px;
-        border-bottom: 1px solid $home-page-border-grey;
-    }
+        align-self: stretch;
+        width: auto;
 
-    li {
-        margin-left: 22px;
-        margin-bottom: 14px;
-    }
-
-    div {
-        gap: 10px;       
-        align-self: stretch; 
-        padding-bottom: 0;
-        margin-bottom: 30px;
-    }
-
-    div:last-child {
-        margin-bottom: 0;
-    }
-
-    div.form-group {
-        label {
-            color: $footer-blue-bg;
-            font-family: Inter;
+        div, h1, h2, h3, h4, h5, h6, p, a, button, ul, li {
+            color: #000;
             font-size: 14px;
+            font-family: Inter;
+            font-style: normal;
+            line-height: 16px;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            font-size: 25px;
             font-weight: 600;
-            line-height: 18px; /* 128.571% */ 
+            margin-bottom: 25px;
+            line-height: 25px;
+        }
+
+        p, li {
+            line-height: 22px;
+        }
+
+        p, input {
+            padding: 0;
+            margin: 0;
             margin-bottom: 10px;
         }
 
-        input, select {
-            display: flex;
+        ul {
+            list-style: none;
+            padding: 0;
+            margin-top: -20px;
+            margin-bottom: 20px;
+            padding-bottom: 4px;
+            border-bottom: 1px solid $home-page-border-grey;
+        }
+
+        li {
+            margin-left: 20px;
+            margin-bottom: 20px;
+        }
+
+        div {
+            gap: 10px;       
+            align-self: stretch; 
+            padding-bottom: 0;
+            margin-bottom: 30px;
+        }
+
+        div:last-child {
+            margin-bottom: 0;
+        }
+
+        div.form-group {            
+            label {
+                color: $footer-blue-bg;
+                font-family: Inter;
+                font-size: 14px;
+                font-weight: 600;
+                line-height: 18px; /* 128.571% */ 
+                margin-bottom: 10px;
+            }
+
+            input, select {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+                height: 45px;
+                align-self: stretch;
+                border-radius: 5px;
+                border: 1px solid $home-page-border-grey;
+                background: #FFF;        
+            }
+            
+            span.required {
+                color: $brand-darker-bg;
+            }
+
+        }
+
+        div.small-gap {
+            margin-bottom: 10px !important;
+        }
+
+        button {
+            width: 100%;
+
+            display: inline-flex;
+            padding: 20px 40px;
             flex-direction: column;
             justify-content: center;
-            align-items: flex-start;
-            height: 45px;
-            align-self: stretch;
+            align-items: center;
+        
             border-radius: 5px;
-            border: 1px solid $home-page-border-grey;
-            background: #FFF;        
-        }    
-    }
+            background: $brand-button-bg;
+            color: white;
+        }
 
-    h1 {
-        font-size: 25px;
-        font-weight: 700;
-        padding-bottom: 0;
-    }
+        button.btn-gradient-red {
+            color: white;
+        }
 
-    button {
-        width: 100%;
+        button.btn-gradient-red:hover {
+            background-color: $home-page-header-blue !important;
+            border-color: $home-page-header-blue;
+        }
 
-        display: inline-flex;
-        padding: 20px 40px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    
-        border-radius: 5px;
-        background: $brand-button-bg;
-        color: white;
-    }
+        form {
+            width: 100%;
+            gap: 30px;
 
-    button.btn-gradient-red {
-        color: white;
-    }
+            input[type=checkbox] {
+                width: 20px;
+                height: 20px;
+                flex-shrink: 0;
+                border-radius: 3px;
+                margin-right: 10px;
+            }
 
-    button.btn-gradient-red:hover {
-        background-color: $home-page-header-blue !important;
-        border-color: $home-page-header-blue;
-    }
+            input[type=checkbox]:checked {
+                border: 1px solid $brand-darker-bg;
+                background: $brand-darker-bg;
+                background-image: url('/static/images/checkbox-checked.svg');
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+        }
 
-    form {
-        width: 100%;
-        gap: 30px;
+        &.edit-profile-page {
+            div.form-group {
+                margin-bottom: 16px; 
+            }
+
+            label.label-helptext {
+                display: flex;
+                flex-direction: row;
+                align-items: top;
+                justify-items: stretch;
+                margin-bottom: 0;
+
+                div {
+                    width: auto;
+                    margin-bottom: 0;
+                }
+
+                div.subtitle {
+                    text-align: right;
+                    margin-left: auto;
+                    color: $helptext-grey;
+                    text-align: right;
+                    font-size: 12px;
+                    font-weight: 400;
+                    line-height: 18px; /* 150% */
+                }
+            }
+        }
     }
 }
